--- a/app/views/top/show.html.erb
+++ b/app/views/top/show.html.erb
@@ -1,6 +1,12 @@
 <div class='flex flex-col items-center justify-center w-full h-full'>
 
-  <div class="p-4"><h1>naibus</h1></div>
+  <%= image_tag 'logo.png', size: '342x342', class: 'rounded-full' %>
+  <div class="pt-4 pb-3">
+    <h1 class='text-lg font-bold'>naibus</h1>
+  </div>
+  <div class="pb-4">
+    <p>naibusはSlackで使えるChatGPTベースのAIアシスタントです。</p>
+  </div>
   <div>
     <a href="https://slack.com/oauth/v2/authorize?scope=app_mentions%3Aread%2Cchat%3Awrite%2Cchat%3Awrite.public&amp;user_scope=&amp;redirect_uri=https%3A%2F%2Fnaibus.onrender.com%2Fslack%2Fauth%2Fcallback&amp;client_id=2840256613.4667501395478" style="align-items:center;color:#000;background-color:#fff;border:1px solid #ddd;border-radius:4px;display:inline-flex;font-family:Lato, sans-serif;font-size:14px;font-weight:600;height:44px;justify-content:center;text-decoration:none;width:204px"><svg xmlns="http://www.w3.org/2000/svg" style="height:16px;width:16px;margin-right:12px" viewBox="0 0 122.8 122.8"><path d="M25.8 77.6c0 7.1-5.8 12.9-12.9 12.9S0 84.7 0 77.6s5.8-12.9 12.9-12.9h12.9v12.9zm6.5 0c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V77.6z" fill="#e01e5a"></path><path d="M45.2 25.8c-7.1 0-12.9-5.8-12.9-12.9S38.1 0 45.2 0s12.9 5.8 12.9 12.9v12.9H45.2zm0 6.5c7.1 0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H12.9C5.8 58.1 0 52.3 0 45.2s5.8-12.9 12.9-12.9h32.3z" fill="#36c5f0"></path><path d="M97 45.2c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9-5.8 12.9-12.9 12.9H97V45.2zm-6.5 0c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V12.9C64.7 5.8 70.5 0 77.6 0s12.9 5.8 12.9 12.9v32.3z" fill="#2eb67d"></path><path d="M77.6 97c7.1 0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9-12.9-5.8-12.9-12.9V97h12.9zm0-6.5c-7.1 0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3c7.1 0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H77.6z" fill="#ecb22e"></path></svg>Add to Slack</a>
   </div>
