--- a/app/views/admin/chat_threads/_chat_thread.html.erb
+++ b/app/views/admin/chat_threads/_chat_thread.html.erb
@@ -32,6 +32,12 @@
   <% if action_name != "show" %>
     <%= link_to "Show this chat thread", [:admin, chat_thread], class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <%= link_to 'Edit this chat thread', edit_admin_chat_thread_path(chat_thread), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <% if chat_thread.user? %>
+      <%= button_to 'Enqueue Mention Job', admin_chat_thread_mention_jobs_path(chat_thread), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium", method: :post %>
+    <% end %>
+    <% if chat_thread.assistant? %>
+      <%= button_to 'Enqueue Response Job', admin_chat_thread_response_jobs_path(chat_thread), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium", method: :post %>
+    <% end %>
     <hr class="mt-6">
   <% end %>
 </div>
