--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -11,8 +11,8 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-    <%= yield %>
+    <main class="container flex px-5 mx-auto mt-28">
+      <%= yield %>
     </main>
   </body>
 </html>
