--- a/app/views/workspaces/edit.html.erb
+++ b/app/views/workspaces/edit.html.erb
@@ -4,6 +4,10 @@
       <%= form.label :open_ai_access_token %>
       <%= form.text_field :open_ai_access_token %>
     </div>
+    <div class='flex items-center justify-center gap-3'>
+      <%= form.label :system_message %>
+      <%= form.text_field :system_message %>
+    </div>
     <div class='flex items-center justify-center p-6'>
     <%= form.submit 'Save', class: 'inline-flex justify-center px-4 py-2 font-semibold text-white border border-transparent leading-5 rounded-md bg-[#007a5a] hover:bg-green-800 focus:outline-none focus:border-green-900 focus:ring-blue active:bg-green-900 transition duration-150 ease-in-out' %>
     </div>
