--- a/app/views/workspaces/edit.html.erb
+++ b/app/views/workspaces/edit.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class='flex items-center justify-center gap-3'>
       <%= form.label :system_message %>
-      <%= form.text_field :system_message %>
+      <%= form.text_area :system_message %>
     </div>
     <div class='flex items-center justify-center gap-3'>
       <%= form.label :open_ai_model %>
